--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"type": "commonjs",
 	"scripts": {
-		"strat": "node index.js",
+		"start": "node index.js",
 		"dev": "nodemon index.js"
 	},
 	"keywords": [],
